--- a/css/index-styles.css
+++ b/css/index-styles.css
@@ -1,59 +1,65 @@
+/* Styles for login page */
 body {
-    font-family: Arial, sans-serif;
-    background-color: #e0b15f;
     margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    background-color: rgb(158, 156, 156);
+}
+
+.container {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
 }
 
-.container {
-    text-align: center;
-    padding: 100px;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    border-radius: 15px;
-}
-
-.button {
-    padding: 10px 20px;
-    background-color: tan;
-    border: 2px solid tan;
+.login-container {
+    width: 300px;
+    padding: 30px;
+    padding-right: 50px;
+    background-color: rgba(59, 59, 59, 0.9);
+    border-radius: 8px;
+    border: 2px solid #fff;
     color: #fff;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    border-radius: 5px;
 }
 
-.button:hover {
-    background-color: #968269;
-    /* Lighten the background color on hover if desired */
+.title {
+    font-size: 30px;
+    text-align: center;
+    align-items: center;
+    color: rgb(184, 130, 38);
 }
 
-.popup {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    justify-content: center;
+.form-group {
     align-items: center;
 }
 
-.popup-content {
-    background: #fff;
-    padding: 100px;
-    border-radius: 8px;
+.input {
+    background-color: #656565;
+    margin-bottom: 15px;
+    padding: 8px;
+    font-size: 16px;
+    border-radius: 20px;
+    width: 100%;
+    color: #fff;
 }
 
-.close-btn {
-    cursor: pointer;
-    font-size: 18px;
-    color: #333;
-    float: right;
+.button {
+    background-color: #d9d9d9;
+    width: 50%;
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 20px;
+    align-items: center;
+    align-self: center;
+
 }
 
+.buttonText {
+    color: #000;
+}
+
+.toggleText {
+    align-self: center;
+    color: white;
+}
