--- a/css/landing-styles.css
+++ b/css/landing-styles.css
@@ -1,137 +1,40 @@
-/* Reset some default styles */
-body,
-h1,
-h2,
-p,
-ul,
-li {
+body {
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #f2f2f2;
 }
 
-body {
-    font-family: 'Arial', sans-serif;
-    background-color: rgb(246, 219, 185);
-}
-
-/* Navigation Bar Styles */
-nav {
-    background-color: tan;
-    padding: 10px 0;
-}
-
-.container,
-.title {
-    max-width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.title {
-    padding-top: 20px;
-}
-
-.title h1 {
-    color: rgb(143, 117, 84);
-}
-
-.logo {
-    font-size: 1.5em;
-    font-weight: bold;
-    color: white;
-}
-
-.nav-links {
-    list-style: none;
-    display: flex;
-}
-
-.nav-links li {
-    margin-right: 20px;
-}
-
-.nav-links a {
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
-}
-
-.cta-button {
-    display: inline-block;
-    background-color: white;
-    color: tan;
-    padding: 10px 20px;
-    font-size: 1.2em;
-    text-decoration: none;
-    border-radius: 5px;
-
-}
-
-/* Landing Page Styles */
-.landing-page {
-    color: white;
+header {
+    background-color: #333;
+    color: #fff;
     text-align: center;
-    padding: 80px 0;
+    padding: 20px 0;
+}
+
+header h1 {
+    margin: 0;
+}
+
+.features {
     display: flex;
-    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
+    padding: 50px 0;
 }
 
-
-.info-title-box {
-    max-width: 1200px;
-    background-color: #093c72;
-    padding: 80px;
-
-}
-
-.info-top-row {
-    display: flex;
-    box-sizing: border-box;
-    text-decoration: none;
-
-}
-
-.info-bottom-row {
-    display: flex;
-    flex: 1;
-    box-sizing: border-box;
-}
-
-.column {
-    flex: 1;
-    box-sizing: border-box;
-    padding: 10px;
-}
-
-.contact-list-box {
-    display: flex;
-}
-
-.info-contact-box {
-
-    display: flex;
-    flex-direction: column;
-    background-color: #06255f80;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-
-    /* 100% of the viewport height */
-}
-
-.scrolling-window {
-    height: 460px;
-    /* Set the desired height for your scrolling window */
-    overflow: auto;
-    /* Optional: Add a border for visual clarity */
-}
-
-.row {
-    flex: 1;
-    box-sizing: border-box;
-    margin: 8px;
+.feature {
+    text-align: center;
+    width: 30%;
+    padding: 20px;
     background-color: #fff;
     border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
 }
