--- a/css/landing-styles.css
+++ b/css/landing-styles.css
@@ -15,6 +15,16 @@ header {
 header h1 {
     margin: 0;
 }
+header button {
+    background-color: #d9d9d9;
+    width: 50%;
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 20px;
+    align-items: center;
+    align-self: center;
+
+}
 
 .features {
     display: flex;
