--- a/css/landing-styles.css
+++ b/css/landing-styles.css
@@ -15,15 +15,79 @@ header {
 header h1 {
     margin: 0;
 }
+
+.navbar {
+    background-color: #7f7f7f;
+    /* Background color of the navbar */
+    padding: 15px;
+    /* Padding around the navbar */
+    text-align: center;
+}
+
+.navbar nav ul {
+    list-style-type: none;
+    /* Remove default list styling */
+    margin: 0;
+    padding: 0;
+}
+
+.navbar nav ul li {
+    display: inline-block;
+    /* Display list items horizontally */
+    margin-right: 50px;
+    /* Spacing between each list item */
+}
+
+.navbar nav ul li a {
+    color: white;
+    /* Text color of the links */
+    text-decoration: none;
+    /* Remove underline from links */
+    padding: 10px 20px;
+    /* Padding inside each link */
+}
+
+.navbar nav ul li a:hover {
+    background-color: #555;
+    /* Background color of links on hover */
+}
+
+header nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+header nav ul li {
+    margin-right: 20px;
+}
+
+header nav ul li a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+}
+
+header nav ul li a:hover {
+    color: #ccc;
+}
+
 header button {
     background-color: #d9d9d9;
-    width: 50%;
-    padding: 10px;
+    padding: 10px 20px;
     font-size: 16px;
     border-radius: 20px;
     align-items: center;
     align-self: center;
+    color: #333;
+    cursor: pointer;
+    border: none;
+    transition: background-color 0.3s ease;
+}
 
+header button:hover {
+    background-color: #ccc;
 }
 
 .features {
@@ -35,7 +99,7 @@ header button {
 
 .feature {
     text-align: center;
-    width: 30%;
+    width: 80%;
     padding: 20px;
     background-color: #fff;
     border-radius: 5px;
@@ -47,4 +111,64 @@ footer {
     color: #fff;
     text-align: center;
     padding: 20px 0;
+}
+
+
+form {
+    background-color: #fff;
+    max-width: 80%;
+    margin: 20px auto;
+    padding: 40px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+form h2 {
+    text-align: center;
+    color: #333;
+}
+
+form label {
+    font-weight: bold;
+    display: block;
+    margin-bottom: 5px;
+    color: #555;
+}
+
+form input[type="text"],
+form input[type="time"],
+form input[type="date"],
+form input[type="tel"],
+form select,
+form textarea {
+    width: calc(100% - 0px);
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+form select {
+    width: 100%;
+}
+
+form textarea {
+    resize: vertical;
+    min-height: 100px;
+}
+
+form input[type="submit"] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    width: 100%;
+}
+
+form input[type="submit"]:hover {
+    background-color: #45a049;
 }
